[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Black.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Invader.tscn" type="PackedScene" id=2]
[ext_resource path="res://Defender/Defender.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Battlefield/Battlefield.gd" type="Script" id=5]
[ext_resource path="res://Sprites/Defender.png" type="Texture" id=6]
[ext_resource path="res://Battlefield/Shader_Material.tres" type="Material" id=7]
[ext_resource path="res://Sprites/PlayStation_button_O.png" type="Texture" id=8]
[ext_resource path="res://Sprites/to_reset.png" type="Texture" id=9]
[ext_resource path="res://Sprites/game_over.png" type="Texture" id=10]
[ext_resource path="res://Sprites/arcadeclassic.png" type="Texture" id=11]
[ext_resource path="res://Sprites/pause.png" type="Texture" id=12]

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 32, 64, 0, 64, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=2]
0/name = "icon.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 0, 32, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Black.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 4 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[node name="Battlefield" type="Node2D"]
material = ExtResource( 7 )
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
pause_mode = 1
tile_set = SubResource( 2 )
collision_mask = 7
format = 1
tile_data = PoolIntArray( -65537, 1, 0, -131072, 1, 0, -131071, 1, 0, -131070, 1, 0, -131069, 1, 0, -131068, 1, 0, -131067, 1, 0, -131066, 1, 0, -131065, 1, 0, -131064, 1, 0, -131063, 1, 0, -131062, 1, 0, -131061, 1, 0, -131060, 1, 0, -131059, 1, 0, -131058, 1, 0, -131057, 1, 0, -131056, 1, 0, -1, 1, 0, -65520, 1, 0, 65535, 1, 0, 16, 1, 0, 131071, 1, 0, 65552, 1, 0, 196607, 1, 0, 131088, 1, 0, 262143, 1, 0, 196624, 1, 0, 327679, 1, 0, 262160, 1, 0, 393215, 1, 0, 327696, 1, 0, 458751, 1, 0, 393232, 1, 0, 524287, 1, 0, 458768, 1, 0, 589823, 1, 0, 524304, 1, 0, 655359, 1, 0, 589840, 1, 0, 720895, 1, 0, 655376, 1, 0, 786431, 1, 0, 720896, 1, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0 )

[node name="Defender_Legend" type="Sprite" parent="."]
pause_mode = 1
position = Vector2( 119, 68 )
scale = Vector2( 0.105313, 0.0871875 )
texture = ExtResource( 6 )
flip_v = true

[node name="Defender" parent="." instance=ExtResource( 3 )]
pause_mode = 1
position = Vector2( 500, 100 )
scale = Vector2( 0.1, 0.1 )
collision_mask = 2
strength = 500.0

[node name="Invader1" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 252, 519 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader2" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 303, 518 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader3" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 352, 518 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader4" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 403, 519 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader5" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 252, 579 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader6" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 303, 578 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader7" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 352, 578 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader8" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 403, 579 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader9" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 454, 519 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader10" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 454, 579 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader11" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 505, 519 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader12" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 505, 579 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader13" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 556, 519 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader14" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 556, 579 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader15" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 607, 519 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader16" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 709, 519 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader17" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 607, 579 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader18" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 658, 519 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader19" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 658, 579 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader20" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 709, 579 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader21" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 252, 459 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader22" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 556, 459 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader23" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 454, 459 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader24" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 505, 459 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader25" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 403, 459 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader26" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 352, 459 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader27" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 303, 459 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader28" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 709, 459 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader29" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 658, 459 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader30" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 607, 459 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader31" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 556, 399 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader32" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 505, 399 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader33" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 454, 399 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader34" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 303, 399 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader35" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 709, 399 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader36" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 658, 399 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader37" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 352, 399 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader38" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 607, 399 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader39" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 252, 399 )
scale = Vector2( 0.07, 0.07 )

[node name="Invader40" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 403, 399 )
scale = Vector2( 0.07, 0.07 )

[node name="GameOver" type="Sprite" parent="."]
pause_mode = 1
position = Vector2( 508, 329 )
scale = Vector2( 2.20077, 2.80556 )
texture = ExtResource( 10 )
flip_v = true

[node name="Press" type="Sprite" parent="."]
pause_mode = 1
position = Vector2( 314, 192 )
scale = Vector2( 0.322387, 0.283305 )
texture = ExtResource( 11 )
flip_v = true

[node name="ToReset" type="Sprite" parent="."]
pause_mode = 1
position = Vector2( 678, 190.5 )
scale = Vector2( 0.996655, 1.02778 )
texture = ExtResource( 9 )
flip_v = true

[node name="PlayStationButtonO" type="Sprite" parent="."]
pause_mode = 1
position = Vector2( 474, 192 )
rotation = 1.5708
scale = Vector2( 0.052, 0.052 )
texture = ExtResource( 8 )

[node name="Pause" type="Sprite" parent="."]
pause_mode = 1
position = Vector2( 520, 303.183 )
scale = Vector2( 3.16751, 2.7576 )
texture = ExtResource( 12 )
flip_v = true

[node name="Screen" type="Sprite" parent="."]
pause_mode = 1
use_parent_material = true
position = Vector2( 512, 300 )
scale = Vector2( 1, 0.585938 )
texture = ExtResource( 1 )

[connection signal="tree_exited" from="Defender" to="." method="_on_Defender_tree_exited"]
